force-app/main/default/objects/Targeted_Indicator__c/Targeted_Indicator__c.object-meta.xml
<CustomObject>
    <description>ECM Identifies an outcome indicator as being associated with a service plan.</description>
    <label>Targeted Indicator</label>
    <nameField>
        <displayFormat>TargetedIndicator-{0000}</displayFormat>
        <label>Targeted Indicator #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targeted Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>