force-app/main/default/objects/Targeted_Indicator__c/fields/OI_Response_Value__c.field-meta.xml
<CustomField>
    <fullName>OI_Response_Value__c</fullName>
    <label>Item Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>