force-app/main/default/objects/Targeted_Indicator__c/fields/Outcome_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator__c</fullName>
    <label>Outcome Indicator</label>
    <referenceTo>Outcome_Indicator__c</referenceTo>
    <relationshipLabel>Targeted Indicators</relationshipLabel>
    <relationshipName>Targeted_Indicators</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>