force-app/main/default/objects/Targeted_Indicator__c/fields/Outcome_Indicator_Variable_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Variable_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome Indicator Variable Configuration</label>
    <referenceTo>Outcome_Indicator_Variable_Configuration__c</referenceTo>
    <relationshipLabel>Targeted Indicators</relationshipLabel>
    <relationshipName>Targeted_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>