force-app/main/default/objects/Targeted_Indicator__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <label>Service Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Targeted Indicators</relationshipLabel>
    <relationshipName>Targeted_Indicators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>